--- a/src/lang/zh_CN.json
+++ b/src/lang/zh_CN.json
@@ -49,7 +49,8 @@
         },
         "dashboard": {
             "index": "仪表盘",
-            "user": "用户"
+            "user": "用户",
+            "board": "板块"
         },
         "error404": "404 找不到",
         "error500": "500 服务器内部错误"
@@ -306,6 +307,7 @@
 
     "dashboard": {
         "user_management": "用户管理",
+        "board_management": "板块管理",
         "install": "安装"
     },
 
