--- a/src/lang/zh_CN.json
+++ b/src/lang/zh_CN.json
@@ -180,7 +180,8 @@
         "description": "简介",
         "parent": "父板块",
         "shortcut": "短链接",
-        "cover": "封面"
+        "cover": "封面",
+        "top_board": "顶级板块"
     },
     "user": {
         "login": "登录",
