--- a/src/lang/zh_CN.json
+++ b/src/lang/zh_CN.json
@@ -302,6 +302,7 @@
         "attachment": "附件",
         "add_attachment": "添加附件",
         "visit_count": "查看",
+        "reply_count": "回复",
         "latest_topics": "最新公告",
         "author_other_topics": "该作者的其他话题",
         "topics_not_found": "没有找到话题",
