--- a/src/lang/zh_CN.json
+++ b/src/lang/zh_CN.json
@@ -317,11 +317,13 @@
     "board": {
         "name": "名称",
         "description": "简介",
+        "access": "访问权限",
         "parent": "父板块",
         "shortcut": "短链接",
         "cover": "封面",
         "top_board": "顶级板块",
-        "boards_not_found": "没有找到板块"
+        "boards_not_found": "没有找到板块",
+        "no_description": "暂无介绍"
     },
 
     "dashboard": {
