--- a/src/lang/zh_CN.json
+++ b/src/lang/zh_CN.json
@@ -55,6 +55,9 @@
         "board": {
             "index": "板块"
         },
+        "topic": {
+            "index": "话题"
+        },
         "error404": "404 找不到",
         "error500": "500 服务器内部错误"
     },
