combine the same type notifications
Signed-off-by: tengattack <tengattack@foxmail.com>

--- a/src/lang/zh_CN.json
+++ b/src/lang/zh_CN.json
@@ -225,6 +225,7 @@
         "my_page": "我的用户页",
         "activate_succeed": "激活成功！",
         "in": "在",
+        "and_others": "等人",
         "reply_you": "回复了你",
         "reply2_you": "发表了新的回复",
         "at_you": "提及了你",
