--- a/src/lang/zh_CN.json
+++ b/src/lang/zh_CN.json
@@ -316,6 +316,9 @@
         "add_attachment": "添加附件",
         "visit_count": "查看",
         "reply_count": "回复",
+        "fold_replies": "收起评论",
+        "expand_replies": "展开评论",
+        "expand_replies_count": " 条评论",
         "latest_topics": "最新公告",
         "author_other_topics": "该作者的其他话题",
         "topics_not_found": "没有找到话题",
