add topic set top
Signed-off-by: tengattack <tengattack@foxmail.com>

--- a/src/lang/zh_CN.json
+++ b/src/lang/zh_CN.json
@@ -308,6 +308,9 @@
         "edit": "编辑",
         "delete": "删除",
         "reply": "回复",
+        "set": "设置",
+        "top": "置顶",
+        "untop": "取消置顶",
         "modified": "已修改",
         "post_reply": "发表回复",
         "title": "标题",
