--- a/src/lang/zh_CN.json
+++ b/src/lang/zh_CN.json
@@ -247,7 +247,7 @@
             "update_success": "更新成功"
         },
         "input_error": {
-            "username": "该用户名已被占用",
+            "username": "该用户名不合法或已被占用",
             "password": "密码错误",
             "new_password": "两次新密码输入不一致或者新密码位数过短",
             "email": "错误的邮箱格式",
